--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tanssi aiheinen sivu">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
@@ -13,11 +14,13 @@
 <body>
     <header>
         <img src="images/logo.png" alt="Sivun logo">
-        <h1>Tanssin Tunteissa</h1>
+        <div>
+            <h1>Tanssin Tunteissa</h1>
+        </div>
     </header>
     <nav>
         <div id="links">
-            <a href="#">Etusivu</a>
+            <a style="background-color: #c8ada4;" href="#">Etusivu</a>
             <a href="merkitys.html">Tanssin merkitys</a>
             <a href="tanssilajit.html">Tanssilajit</a>
         </div>
@@ -25,12 +28,11 @@
             <button id="dropdown-button">
                 <img src="images/menu.svg" alt="Menu button">
             </button>
-            <input id="search-field" type="text">
+            <input name="haku" id="search-field" type="search" placeholder="Hae sivulta">
             <button id="search-button">
                 <img src="images/search.svg" alt="Search button">
             </button>
         </div>
-        </ul>
     </nav>
     <main>
         <section>
@@ -40,7 +42,8 @@
                 tiettyyn rytmiin yleensä musiikin tahtiin. Esittävänä taiteena tanssi on kaunista katsottavaa, mutta se
                 on
                 myös
-                monipuolista liikuntaa. Tanssi, kuten kaikki muutkin liikuntalajit edistävät ihmisen fyysistä ja
+                monipuolista liikuntaa. <br> <br>Tanssi, kuten kaikki muutkin liikuntalajit edistävät ihmisen fyysistä
+                ja
                 psyykkistä
                 terveyttä. Tanssilla on kuitenkin syvempi vaikutus ihmiseen. Jokaisella ihmisellä on oma uniikki
                 tanssityylinsä, joka on osa tanssijan identiteettiä. Tanssiessa ollaan läsnä omassa kehossa ja pystytään
