--- a/baletti.html
+++ b/baletti.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Tanssi aiheinen sivu">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/baletti.css">
+    <script defer src="js/main.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <title>Tanssin Tunteissa</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html"> 
+            <img src="images/logo.png" alt="Sivun logo">
+        </a>
+        <div>
+            <h1>Tanssin Tunteissa</h1>
+        </div>
+    </header>
+    <nav>
+        <div id="links">
+            <a href="index.html">Etusivu</a>
+            <a href="merkitys.html">Tanssin merkitys</a>
+            <a style="background-color: #c8ada4;" href="tanssilajit.html">Tanssilajit</a>
+        </div>
+        <div id="search">
+            <button id="dropdown-button">
+                <img src="images/menu.svg" alt="Menu button">
+            </button>
+            <input name="haku" id="search-field" type="search" placeholder="Hae sivulta">
+            <button id="search-button">
+                <img src="images/search.svg" alt="Search button">
+            </button>
+        </div>
+    </nav>
+    <main>
+            <section>
+                <h2>Baletti - Vanhin länsimaisen taidetanssin laji</h2>
+                <p> Ensimmäisen kerran balettia on tanssinut hoviväki Italiassa jo 1500-luvulla. Hovibaletti levisi
+                    Ranskaan ja siellä siitä alettiin kehittämään omaa taidemuotoansa.
+                    Ranskan aurinkokuningas Ludvig XIV tanssi niihin aikoihin itsekin balettia. Tällöin kehitettiin mm.
+                    baletin jalkojen viisi perusasentoa, joita käytetään yhä nykypäivänäkin.
+                    Aluksi baletti oli vain oopperan laajennus, mutta 1713 Pariisin Oopperassa aloitettiin uudenlainen
+                    tanssikoulutus balettitanssijoille.
+                    1700-luvulla baletista muodostui itsenäinen lajinsa. <br> <br> 1830-luvulta alkaen baletissa
+                    kukoisti romantiikan vaihe. Romantiikan tyylisuunnalle tyypilliset piirteet tuli tällöin esille myös
+                    baleteissa.
+                    Tällaisia olivat mm. yliluonnollisuus ja suuret tunteet. Aikaisemmin miestanssijat eli ballerinot
+                    olivat olleet suuremmassa osassa baletissa, mutta tästä alkoi naistanssijoiden eli ballerinojen
+                    kukoistus.
+                    Yleensä naistanssijoiden käyttämä baletin tunnusmerkki asustus eli tutu tuli käyttöön ensimmäisen
+                    kerran 1832 La Sylphide-baletissa.
+                    Ennen tätä ballerinat olivat käyttäneet pidempiä hameita, mutta tämä uusi lyhyempi tutu sai jalkojen
+                    liikkeet näkymään paremmin. Tällöin balleriinan tekniset taidot tulivat paremmin esille.
+                    En pointe eli varpaiden kärjillä tanssiminen otettiin käyttöön ensimmäistä kertaa romanttisen
+                    baletin aikana. Kärkitossuja käyttää yleensä vain naistanssijat. Niiden avulla tanssi saadaan
+                    näyttämään kevyeltä, sirolta ja kauniilta.
+                    Tarkoitus on saada tanssi näyttämään mahdollisimman helpolta, vaikka todellisuudessa se ei sitä ole.
+                    Kärkitossujen käytöstä tulee usein rakkoja ja niillä tanssiminen saattaa olla välillä kivuliasta,
+                    vaikka varpaiden kärjissä käytetäänkin erilaisia pehmusteita. <br> <br>
+                    Romantiikan ajan jälkeen baletin painopiste siirtyi Venäjälle. Venäläinen Pyotr Tchaikovskyn sävelsi
+                    useita maailman tunnetuimpia baletteja, kuten Joutsenlampi ja Pähkinänsärkijä. Venäjällä kehittyi
+                    omanlainen balettityylinsä.
+                    Nykyään on erilaisia baletin tekniikkatyylejä esimerkiksi venäläinen
+                    Vaganova tekniikka ja perinteinen ranskalainen tekniikka.
+                    Niiden luonteiden välillä on joitakin eroja, mutta perusteet ja termit ovat samoja. <br> <br>
+                    Tunnetuimpia baletteja ovat Joutsenlampi, Pähkinänsärkijä, Coppelia, Prinsessa Ruusunen, La
+                    bayadère, Don Quixote, Giselle sekä Romeo ja Julia.
+                </p>
+            </section>
+            <aside>
+                <img src="images/baletti2.jpeg" alt="Baletti kuva">
+                <img src="images/baletti3.jpeg" alt="Baletti kuva">
+            </aside>
+    </main>
 </body>
+
 </html>
