--- a/nykytanssi.html
+++ b/nykytanssi.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Tanssi aiheinen sivu">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nykytanssi.css">
+    <script defer src="js/main.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <title>Tanssin Tunteissa</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html"> 
+            <img src="images/logo.png" alt="Sivun logo">
+        </a>
+        <div>
+            <h1>Tanssin Tunteissa</h1>
+        </div>
+    </header>
+    <nav>
+        <div id="links">
+            <a href="index.html">Etusivu</a>
+            <a href="merkitys.html">Tanssin merkitys</a>
+            <a style="background-color: #c8ada4;" href="tanssilajit.html">Tanssilajit</a>
+        </div>
+        <div id="search">
+            <button id="dropdown-button">
+                <img src="images/menu.svg" alt="Menu button">
+            </button>
+            <input name="haku" id="search-field" type="search" placeholder="Hae sivulta">
+            <button id="search-button">
+                <img src="images/search.svg" alt="Search button">
+            </button>
+        </div>
+    </nav>
+    <main>
+            <section>
+                <h2>Moderni tanssi - Rikotaan baletin ihanteita </h2>
+                <p> Kuten monet muutkin tanssilajit, myös moderni tanssi kehittyi baletin pohjalta 1900-luvulla. 
+                    Sen ideana oli rikkoa baletin ihanteita, rajoja ja tekniikkaa, jotta tanssijat pystyisivät liikkumaan ja ilmaisemaan tunteita vapaammin. 
+                    Modernin tanssin historian tunnetuin henkilö on amerikkalainen Isadora Duncan. Hän järkytti yleisöä tanssimalla paljain jaloin. <br> <br> 
+                    Amerikkalainen Martha Graham kehitti modernille tanssille ensimmäistä omanlaistaan tekniikka, jossa muun muassa lattiatyöskentelyllä on merkittävä rooli. 
+                    Balettiin verrattuna se on paljon vapaampaa eikä tekniikka rajoita tanssimista, vaan voidaan keskittyä ilmaisuun ja tarinankerrontaan. <br> <br> 
+                    Grahamin tanssioppilas Merce Cunninghamin kehitti 1900-luvun loppupuolella modernin tanssin pohjalta nykytanssin. Nykytanssissa keskitytään enemmän itse liikkeeseen ja se on ennalta-arvaamattomampaa.  <br> <br> 
+                    Improvisaatio on merkittävässä osassa varsinkin modernissa tanssissa. Improvisaatio toimii hyvänä välineenä koreografioiden ideoinnissa. 
+                    Improvisaatio poistaa tanssijalta kaikki rajoitteet, jolloin oma ilmaisu ja kehonkieli korostuvat.
+                    
+                </p>
+            </section>
+            <aside>
+                <img src="images/nykytanssi3.jpeg" alt="Moderni tanssi kuva">
+                <img src="images/nykytanssi2.jpeg" alt="Moderni tanssi kuva">
+            </aside>
+    </main>
 </body>
+
 </html>
