--- a/merkitys.html
+++ b/merkitys.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Tanssi aiheinen sivu">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/merkitys.css">
+    <script defer src="js/main.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <title>Tanssin Tunteissa</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html"> 
+            <img src="images/logo.png" alt="Sivun logo">
+        </a>
+        <div>
+            <h1>Tanssin Tunteissa</h1>
+        </div>
+    </header>
+    <nav>
+        <div id="links">
+            <a href="index.html">Etusivu</a>
+            <a style="background-color: #c8ada4;" href="#">Tanssin merkitys</a>
+            <a href="tanssilajit.html">Tanssilajit</a>
+        </div>
+        <div id="search">
+            <button id="dropdown-button">
+                <img src="images/menu.svg" alt="Menu button">
+            </button>
+            <input name="haku" id="search-field" type="search" placeholder="Hae sivulta">
+            <button id="search-button">
+                <img src="images/search.svg" alt="Search button">
+            </button>
+        </div>
+    </nav>
+    <main>
+        <section>
+            <h2>Tanssi osana elämää</h2>
+            <p> Tanssiessa oppii tuntemaan omaa kehoaan ja omaa liikekieltään.
+                Sen kautta pystytään välittämään tunteita ja kertoa tarinoita. 
+                Aina tanssilla ei kuitenkaan tarvitse olla mitään sanomaa. 
+                Joskus vain liikkuminen mieluiseen tapaan tekee hyvää.
+                Tanssia käytetään jopa terapiamuotona. Joitain asioita on vaikea sanoittaa, jolloin hyvä tapa ilmaista niitä on kehon liikkeillä. <br> <br>
+                Mielenterveyden lisäksi tanssi tietenkin myös edistää fyysistä terveyttä.
+                Tanssi onkin erinomainen liikuntalaji, koska se on niin monipuolista.
+                Kehoa kannateltaessa tanssiessa oikealla tavalla tulee käytettyä syvempiä lihaksia varsinkin keskivartalossa. 
+                Tanssi kehittää lihasvoimaa, kestävyyttä sekä liikkuvuutta ja tasapainoa.
+                 </p>
+        </section>
+        <aside>
+            <img src="images/merkitys1.jpeg" alt="Tanssin merkitys kuva">
+        </aside>
+    </main>
 </body>
+
 </html>
